ingress-endpoint.yml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-monitor
  namespace: monitor
  annotations:
    # cert-manager.io/cluster-issuer: "letsencrypt-prod"
    # cert-manager.io/cluster-issuer: "letsencrypt-staging"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: public
  tls:
    - hosts:
        - monitor.example.com
      secretName: ssl-ehr
  rules:
    - host: monitor.example.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: grafana
                port:
                  number: 3000
---
kind: Service
apiVersion: v1
metadata:
 name: grafana
 namespace: monitor
spec:
 type: ClusterIP
 ports:
 - port: 3000
   targetPort: 3000
---
kind: Endpoints
apiVersion: v1
metadata:
 name: grafana
 namespace: monitor
subsets:
 - addresses:
     - ip: 192.168.10.10
   ports:
     - port: 3000
